@@ -1,0 +1,14 @@
+.. _1.7.3:
+
+GammaLib 1.7.3 release (2 December 2020)
+========================================
+
+Overview
+--------
+
+GammaLib 1.7.3 is a bug fix release for GammaLib release 1.7.
+
+The following bugs were fixed:
+
+* [`3472 <https://cta-redmine.irap.omp.eu/issues/3472>`_] -
+  Fix inaccuracy in CTA background model evaluation
