@@ -6,6 +6,7 @@ Release History
 .. toctree::
    :maxdepth: 1
 
+   GammaLib 1.7.3 <1.7.3>
    GammaLib 1.7.2 <1.7.2>
    GammaLib 1.7.1 <1.7.1>
    GammaLib 1.7 <1.7>
